# CpuRunner

./: .gitignore  CMakeLists.txt  README.md  options.ini
sh/: cpurunner.sh  programpath.sh  windows-build.bat  windows-environment.bat
src/: CpuRunner.cpp  main.cpp
src/include/: CpuRunner.h
src/include/CpuRunner/: CpuRunnerOption.h  OptionsManager.h  RunnerWidget.h  UsageLabel.h  Widget.h
src/options/: OptionsManager.cpp
src/widget/: CharacterWidget.cpp  CharacterWidget.h  RunnerWidget.cpp  UsageLabel.cpp
